È Deprecato? Si, mi interessa? No. (Nice To have: modificare l'integrazione Java-Js senza JSObject che è deprecato)

--- a/resources/web/index.html
+++ b/resources/web/index.html
@@ -3,23 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <title>App JavaFX con WebView</title>
+    <link rel="stylesheet" href="style.css">
     <script>
         // Funzione per il primo pulsante
         function showName() {
-            const data = window.javaConnector.getName(); // Usa il nuovo bridge
-            document.getElementById("dynamic-text").innerText = "Nome ricevuto da Java: " + data.name;
+            window.javaConnector.getName({})
+                .then(data => {
+                    document.getElementById("dynamic-text").innerText = "Nome ricevuto da Java: " + data.name;
+                })
+                .catch(error => {
+                    document.getElementById("dynamic-text").innerText = "Errore: " + error;
+                });
         }
 
         // Funzione per il secondo pulsante
         function showHelloWorld() {
-            const data = window.javaConnector.getHelloWorld(); // Usa il nuovo bridge
-            document.getElementById("dynamic-text").innerText = "Messaggio ricevuto da Java: " + data.message;
+            window.javaConnector.getHelloWorld({})
+                .then(data => {
+                    document.getElementById("dynamic-text").innerText = "Messaggio ricevuto da Java: " + data.message;
+                })
+                .catch(error => {
+                    document.getElementById("dynamic-text").innerText = "Errore: " + error;
+                });
         }
+
+        // Verifica connessione al bridge
+        window.onload = function () {
+            setTimeout(function () {
+                const status = document.getElementById("status");
+                if (window.javaConnector) {
+                    status.textContent = "✓ Bridge connesso";
+                    status.className = "status-ok";
+                } else {
+                    status.textContent = "✗ Bridge non disponibile";
+                    status.className = "status-error";
+                }
+            }, 500);
+        };
     </script>
 </head>
 <body>
-<h1 id="dynamic-text">Premi un pulsante per cambiare questo testo</h1>
-<button onclick="showName()">Mostra Nome</button>
-<button onclick="showHelloWorld()">Mostra Hello World</button>
+<div class="card">
+    <h1>Comunicazione Java-JavaScript</h1>
+    <div id="status" class="status-loading">Caricamento...</div>
+    <h2 id="dynamic-text">Premi un pulsante per cambiare questo testo</h2>
+    <div class="buttons">
+        <button onclick="showName()">Mostra Nome</button>
+        <button onclick="showHelloWorld()">Mostra Hello World</button>
+    </div>
+</div>
 </body>
 </html>
